# libreoffice-to-pdf

./: .gitignore  ARTIFACT-ANALYSIS.md  LO_VERSION  LTO-SESSION-LOG.md  README.md  add-win-support.md  icu-filter.json
.github/workflows/: build-linux-arm64.yml  build-linux-x64.yml  build-macos-x64.yml  build-macos.yml  build-windows-arm64.yml  build-windows.yml  dep-ladder-verify.yml  release-nuget.yml  test-nuget-linux-arm64.yml  test-nuget-linux-x64.yml  test-nuget-macos-arm64.yml  test-nuget-macos-x64.yml  test-nuget-windows-arm64.yml  test-nuget-windows-x64.yml
artifacts/: deps-allowlist-linux.txt  deps-allowlist-macos.txt  deps-allowlist-windows.txt  prune-manifest-docx-aggressive.txt
distro-configs/: SlimLO-macOS.conf  SlimLO-windows.conf  SlimLO.conf
docker/: Dockerfile.linux-x64  Dockerfile.test-example
dotnet/: SlimLO.sln
dotnet/SlimLO/: ConversionDiagnostic.cs  ConversionOptions.cs  ConversionResult.cs  Enums.cs  NativeMethods.cs  PdfConverter.cs  PdfConverterOptions.cs  README.md  SlimLO.csproj  SlimLOException.cs
dotnet/SlimLO.Native/: SlimLO.Native.csproj
dotnet/SlimLO.NativeAssets.Linux/: README.md  SlimLO.NativeAssets.Linux.csproj
dotnet/SlimLO.NativeAssets.Linux/buildTransitive/: SlimLO.NativeAssets.Linux.targets
dotnet/SlimLO.NativeAssets.Windows/: README.md  SlimLO.NativeAssets.Windows.csproj
dotnet/SlimLO.NativeAssets.Windows/buildTransitive/: SlimLO.NativeAssets.Windows.targets
dotnet/SlimLO.NativeAssets.macOS/: README.md  SlimLO.NativeAssets.macOS.csproj
dotnet/SlimLO.NativeAssets.macOS/buildTransitive/: SlimLO.NativeAssets.macOS.targets
dotnet/SlimLO.TestCli/: Dockerfile  Dockerfile.appservice  Program.cs  SlimLO.TestCli.csproj  test.docx
dotnet/SlimLO.Tests/: PdfConverterTests.cs  PolyfillTests.cs  SlimLO.Tests.csproj  WorkerProcessPolyfillTests.cs
dotnet/SlimLO/Internal/: Protocol.cs  StderrDiagnosticParser.cs  WorkerLocator.cs  WorkerPool.cs  WorkerProcess.cs
dotnet/SlimLO/Internal/Polyfills/: CallerArgumentExpressionAttribute.cs  IsExternalInit.cs  ThrowHelpers.cs
dotnet/SlimLO/buildTransitive/: SlimLO.targets
example/: Dockerfile  Example.csproj  Program.cs  nuget.config  run.sh
java/: pom.xml
java/example/: pom.xml
java/example/src/main/java/com/slimlo/example/: Example.java
java/slimlo/: pom.xml
java/slimlo/src/main/java/com/slimlo/: ConversionDiagnostic.java  ConversionOptions.java  ConversionResult.java  DiagnosticCategory.java  DiagnosticSeverity.java  DocumentFormat.java  PdfConverter.java  PdfConverterOptions.java  PdfVersion.java  SlimLOErrorCode.java  SlimLOException.java
java/slimlo/src/main/java/com/slimlo/internal/: Protocol.java  StderrDiagnosticParser.java  WorkerLocator.java  WorkerPool.java  WorkerProcess.java
java/slimlo/src/test/java/com/slimlo/: ConversionResultTest.java  PdfConverterTest.java  ProtocolTest.java
patches/: 001-add-slimlo-configure-flag.sh  002-strip-modules.sh  003-slimlo-distro-config.sh  004-strip-filters.sh  005-strip-ui-libraries.sh  006-fix-mergelibs-conditionals.sh  007-fix-swui-db-conditionals.sh  008-mergedlibs-export-constructors.sh  009-fix-nonmerged-lto-link.postautogen  010-force-native-winsymlinks.sh  010-icu-data-filter.sh  011-fix-windows-midl-include.sh  011-sfxapplication-getorcreate.sh  012-fix-lcms2-msbuild-env.sh  013-fix-libjpeg-turbo-hidden-macro.sh  014-fix-icu-msvc-lib-env.sh  015-fix-icu-autoconf-wrapper-msvc.sh  016-fix-nss-msvc-env.sh  017-lokit-buffer-api.sh  018-fix-icu-windows-configure-flags.sh  019-strip-windows-atl-targets.sh  020-fix-harfbuzz-meson-msvc-path.sh  021-support-vs2026.sh  022-fix-external-patch-line-endings.sh  023-fix-opencl-guard-formulacell.sh  024-fix-avmedia-guard-svdomedia.sh  025-fix-curl-guards.sh  026-slimlo-merge-install-guards.sh  027-dep-ladder-build-pruning.sh  028-guard-xmlsec-uiconfig.sh  029-strip-external-xmlsec.sh  030-fix-basic-noscripting-stubs.sh  031-lokit-locale-fallback.sh
scripts/: Start-WindowsBuild.ps1  apply-patches.sh  assert-config-features.sh  assert-merged-deps.sh  build.sh  bump-lo-version.sh  check-deps-allowlist.sh  docker-build.sh  extract-artifacts.sh  linux-docker-validate.sh  macos-dep-ladder.sh  macos-ultra-matrix.sh  measure-artifact.sh  pack-maven.sh  pack-nuget.sh  prepare-windows-handoff.sh  prune-probe.sh  run-gate.sh  run-windows-build.bat  setup-prerequisites.ps1  setup-windows-msys2.sh  test-patches.sh  windows-build.sh  windows-debug-harfbuzz.sh  write-build-metadata.sh
slimlo-api/: CMakeLists.txt
slimlo-api/include/: slimlo.h
slimlo-api/src/: lokit_macos_shim.h  slimlo.cxx  slimlo_worker.c
tests/: generate_complex_docx.py  generate_stress_docx.py  generate_test_docx.py  lounorc  test.sh  test_convert.c
tests/fixtures/: barcode_font.docx  large_document.docx  missing_fonts.docx  multi_font.docx  rich_formatting.docx  stress_test.docx  unicode_text.docx
